fix wrapp

--- a/index.css
+++ b/index.css
@@ -30,18 +30,18 @@
   margin: 0 auto;
   font-family: "Muller", Arial, Helvetica, sans-serif;
   padding: 0 0 0 60px;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 @media only screen and (max-width: 740px) {
   #nana_grid {
-    padding: 0 0 0 40px;
+    padding: 0 0 0s 40px;
   }
 }
 
 @media only screen and (max-width: 620px) {
   #nana_grid {
-    padding: 0 15px;
+    padding: 0 10px;
   }
 }
 
@@ -119,7 +119,6 @@
   color: white;
   transition: linear 0.2s;
 }
-
 
 #nana_grid .tab_active {
   background-color: #ee7221;
@@ -289,7 +288,6 @@
   #nana_grid .card__btn {
     font-size: 13.44px;
     line-height: 13.44px;
-    /* margin: 15px 10px 10px; */
     height: 36px;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -317,126 +315,126 @@
 }
 
 #nana_grid .popup_is-opened {
-    display: flex;
+  display: flex;
 }
 
 #nana_grid .popup-review__content {
-    max-width: 708px;
-    width: 100%;
-    background-color: #fff;
-    padding: 50px 64px ;
-    box-sizing: border-box;
-    position: relative;
+  max-width: 708px;
+  width: 100%;
+  background-color: #fff;
+  padding: 50px 64px;
+  box-sizing: border-box;
+  position: relative;
 }
 
 @media only screen and (max-width: 620px) {
-    #nana_grid .popup-review__content  {
-        background-color: #fff;
-        padding: 30px 35px;
-        width: 90%;
-    }
+  #nana_grid .popup-review__content {
+    background-color: #fff;
+    padding: 30px 35px;
+    width: 90%;
+  }
 }
 
 #nana_grid .popup__close {
-    width: 24px;
-    height: 24px;
-    background: transparent url(./images/close.svg) center no-repeat;
-    border: none;
-    cursor: pointer;
-    position: absolute;
-    right: 13px;
-    top: 13px;
-    opacity: 100%;
-    background-size:contain;
+  width: 24px;
+  height: 24px;
+  background: transparent url(./images/close.svg) center no-repeat;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 13px;
+  top: 13px;
+  opacity: 100%;
+  background-size: contain;
 }
 
 @media only screen and (max-width: 620px) {
-    #nana_grid .popup__close  {
-        width: 12px;
+  #nana_grid .popup__close {
+    width: 12px;
     height: 12px;
-    }
+  }
 }
 
 #nana_grid .popup-review__form {
-    max-width: 580px;
+  max-width: 580px;
 }
 
 #nana_grid .popup__heading {
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 30px;  
-    text-transform: uppercase;
-    margin: 0 0 25px;
-    text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin: 0 0 25px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 620px) {
-    #nana_grid .popup__heading  {
-        font-size: 24px;
-        line-height: 24px; 
-    }
+  #nana_grid .popup__heading {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 #nana_grid .popup__subheading {
   font-weight: bold;
-    font-size: 18x;
-    line-height: 20px; 
-    margin: 0 0 25px;
-    text-align: center;
+  font-size: 18x;
+  line-height: 20px;
+  margin: 0 0 25px;
+  text-align: center;
 }
 
 #nana_grid .popup__button {
-    margin: 35px auto 0;
-    width: 275px;
-    height: 36px;
-    background-color: #ee7221;
-    border: 1px solid #ee7221;
-    outline: none;
-    font-weight: bold;
-    display: block;
-    font-size: 18px;
-    line-height: 18px;
-    color: #000000;
-    text-align: center;
-    padding: 9px 15px;
-    cursor: pointer;
+  margin: 35px auto 0;
+  width: 275px;
+  height: 36px;
+  background-color: #ee7221;
+  border: 1px solid #ee7221;
+  outline: none;
+  font-weight: bold;
+  display: block;
+  font-size: 18px;
+  line-height: 18px;
+  color: #000000;
+  text-align: center;
+  padding: 9px 15px;
+  cursor: pointer;
 }
 
 #nana_grid .popup__button:hover {
-    text-decoration: underline;
-    transition: linear 0.2s;
+  text-decoration: underline;
+  transition: linear 0.2s;
 }
 
 @media only screen and (max-width: 620px) {
-    #nana_grid .popup__button  {
-        width: 100%;
-    }
+  #nana_grid .popup__button {
+    width: 100%;
+  }
 }
 
 #nana_grid .popup__button_not-valid {
-    background-color: #FFAC76;
-    color: #737373;
+  background-color: #ffac76;
+  color: #737373;
 }
 
 #nana_grid .popup__input {
-    width: 90%;
-    display: block;
-    background-color: #d9d9d9;
-    border: 1px solid #d9d9d9;
-    outline: none;
-    font-size: 18px;
-    line-height: 20px;
-    color: #787878;
-    padding: 12px 15px;
-    margin: 0 auto 20px;
+  width: 90%;
+  display: block;
+  background-color: #d9d9d9;
+  border: 1px solid #d9d9d9;
+  outline: none;
+  font-size: 18px;
+  line-height: 20px;
+  color: #787878;
+  padding: 12px 15px;
+  margin: 0 auto 20px;
 }
 
 @media only screen and (max-width: 620px) {
-    #nana_grid .popup__input {
-        width: 90%;
-    }
+  #nana_grid .popup__input {
+    width: 90%;
+  }
 }
 
 #nana_grid .popup__input:focus {
-    outline-color: #C0C0C0;  
+  outline-color: #c0c0c0;
 }
